--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "@phosphor-icons/react": "2.1.6",
     "apexcharts": "3.49.2",
     "axios": "^1.8.3",
+    "cookies-next": "^5.1.0",
     "dayjs": "1.11.11",
     "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
+    "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "react": "18.3.1",
     "react-apexcharts": "1.4.1",
