--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/auth/sign-in-form.jsx", "src/components/auth/auth-guard.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/auth/sign-in-form.jsx", "src/components/auth/auth-guard.jsx", "src/components/auth/withAuth.js"],
   "exclude": ["node_modules"]
 }
