--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@testing-library/jest-dom": "6.4.6",
     "@testing-library/react": "16.0.0",
     "@types/jest": "29.5.12",
+    "@types/js-cookie": "^3.0.6",
     "@types/mapbox-gl": "3.1.0",
     "@types/node": "20.14.9",
     "@types/react": "18.3.3",
