--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "apexcharts": "3.49.2",
     "axios": "^1.8.3",
     "cookies-next": "^5.1.0",
+    "date-fns": "^3.6.0",
     "dayjs": "1.11.11",
     "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
