--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/auth/sign-in-form.jsx", "src/components/auth/auth-guard.jsx", "src/components/auth/withAuth.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/auth/sign-in-form.jsx", "src/components/auth/auth-guard.jsx", "src/components/auth/withAuth.js", "src/app/dashboard/page.jsx", "src/components/dashboard/overview/latest-orders.jsx"],
   "exclude": ["node_modules"]
 }
