--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "1.11.11",
     "dotenv": "^16.4.7",
+    "emailjs-com": "^3.2.0",
     "firebase": "^11.4.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.4",
@@ -44,6 +45,7 @@
     "react-apexcharts": "1.4.1",
     "react-dom": "18.3.1",
     "react-hook-form": "7.52.0",
+    "uuid": "^11.1.0",
     "zod": "3.23.8"
   },
   "devDependencies": {
